--- a/OpenCv/OpenCv.vcxproj
+++ b/OpenCv/OpenCv.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="MainUI.h" />
     <ClInclude Include="Process.h" />
     <ClInclude Include="struct.h" />
+    <ClInclude Include="th.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
