--- a/OpenCv/OpenCv.vcxproj.filters
+++ b/OpenCv/OpenCv.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="cvui.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="tete.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
